--- a/index2.html
+++ b/index2.html
@@ -11,37 +11,37 @@
         <center>
             <fieldset>
         <h1>Majili</h1>
-        <img src="../majili.jpg" width="300" height="300"><br>
+        <img src="./majili.jpg" width="300" height="300"><br>
           <h2>song name: Priyathama</h2>
           <audio controls >
-            <source src="../priyathama.mp3">
+            <source src="./priyathama.mp3">
             
             </audio>
             <br><br>
-            <button><a href="../priyathama.mp3" download>download</a></button><br><br>
+            <button><a href="./priyathama.mp3" download>download</a></button><br><br>
             </fieldset>
             <br>
             <fieldset>
                 <h1>Tillu square</h1>
-                <img src="../tillu.png" width="300" height="300"><br>
+                <img src="./tillu.png" width="300" height="300"><br>
                   <h2>song name: Radhika</h2>
                   <audio controls muted>
-                    <source src="../Radhika.mp3">
+                    <source src="./Radhika.mp3">
                     
                     </audio>
                     <br><br>
-                    <button><a href="../Radhika.mp3" download>download</a></button><br><br>
+                    <button><a href="./Radhika.mp3" download>download</a></button><br><br>
                     </fieldset>
                     <br>
                     <fieldset>
                         <h1>Beast</h1>
-                        <img src="../beast.png" width="400" height="300"><br>
+                        <img src="./beast.png" width="400" height="300"><br>
                           <h2>Arabic Kuthu</h2>
                           <audio controls muted>
-                            <source src="../Arabic Kuthu.mp3">
+                            <source src="./Arabic Kuthu.mp3">
                             </audio>
                             <br><br>
-                            <button><a href="../Arabic Kuthu.mp3" download>download</a></button><br><br>
+                            <button><a href="./Arabic Kuthu.mp3" download>download</a></button><br><br>
                             </fieldset>
                             </center>
                             </body>
